[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lsm-bloom-allocation"
version = "0.1.0"
description = "Analytical value-of-adaptivity for LSM Bloom-filter allocation (log-law x two-clock)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Madhulatha Mandarapu", email = "madhulatha@samyama.ai" },
    { name = "Sandeep Kunkunuru", email = "sandeep@samyama.ai" },
]
dependencies = ["numpy>=1.23", "scipy>=1.9"]

[project.optional-dependencies]
dev = ["pytest>=7", "matplotlib>=3.6", "pandas>=1.5"]

[tool.setuptools.packages.find]
include = ["lsm_bloom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
